--- a/Ubiquitous2/View/MainWindow.xaml
+++ b/Ubiquitous2/View/MainWindow.xaml
@@ -13,7 +13,7 @@
         Title="Ubiquitous 2.0"   
         Style="{DynamicResource MainWindowStyle}"
         WindowStyle="None"
-        Topmost="True"    
+        Topmost="{Binding AppConfig.IsOnTop}"    
         DataContext="{Binding Source={StaticResource Locator},Path=Main}" 
         Background="{x:Null}" 
         ResizeMode="NoResize"
