--- a/Ubiquitous2/View/UserListWindow.xaml
+++ b/Ubiquitous2/View/UserListWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:view="clr-namespace:UB.View"
         xmlns:Interactivity="clr-namespace:UB.Interactivity"
-        Topmost="{Binding UserList.AppConfig.IsOnTop}"
+        Topmost="{Binding Source={StaticResource Locator}, Path=UserList.AppConfig.IsOnTop}"
         Visibility="{Binding Source={StaticResource Locator},Path=UserList.AppConfig.IsUserListVisible, Converter={StaticResource boolToVisibilityConverter}}"
         Title="Users" Width="300" UseLayoutRounding="True" SizeToContent="Width" Icon="/Ubiquitous2;component/Resources/ubiquitous smile.ico">
     <i:Interaction.Behaviors>
