Hitbox - additional check for record switcher  on topic update

--- a/Ubiquitous2/View/ImageStack.xaml
+++ b/Ubiquitous2/View/ImageStack.xaml
@@ -5,6 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d"  
              d:DesignHeight="12" d:DesignWidth="12">
+
+    <UserControl.Style>
+        <Style TargetType="UserControl">
+            <Setter Property="Visibility" Value="Visible" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Count}" Value="0">
+                    <Setter Property="Visibility" Value="Collapsed" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Style>
+    
     <Grid>
         <ItemsControl Focusable="False" ItemsSource="{Binding}">
             <ItemsControl.ItemTemplate>
