--- a/Ubiquitous2/View/ChatBoxView.xaml
+++ b/Ubiquitous2/View/ChatBoxView.xaml
@@ -12,8 +12,11 @@
              Style="{DynamicResource ChatBoxStyle}"     
              d:DesignWidth="300" d:DesignHeight="400" RenderTransformOrigin="0.5,0.5">
 
-    
-    
+
+    <UserControl.CacheMode>
+        <BitmapCache RenderAtScale="1" SnapsToDevicePixels="True"  />
+    </UserControl.CacheMode>
+
     <i:Interaction.Behaviors>
         <Interactivity:ElementToPng FileName="{Binding ChatToImagePath}" DelayBefore="600" SaveOnDemand="True" SaveFlag="{Binding SavePngFlag}"/>
         <Interactivity:ElementToOBSPlugin SaveInterval="40"/>
